--- a/templates/base.html
+++ b/templates/base.html
@@ -8,44 +8,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'index' %}">Ethical Hacking</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'login_attempt' %}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'view_profile' user_id=user.id %}">Profile</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'comment' %}">Comment</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Search</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'deserialize' %}">Deserialize</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'transfer' %}">Transfer</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'fetch_data' %}">Fetch Data</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'parse_xml' %}">Parse XML</a></li>
-                    </ul>
-                </div>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'index' %}">Ethical Hacking</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login_attempt' %}">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
+                    <!--                        <li class="nav-item"><a class="nav-link" href="{% url 'view_profile' user_id=user.id %}">Profile</a></li>-->
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'view_profile' user_id=user.id %}">Profile</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        {% endif %}
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'comment' %}">Comment</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Search</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'deserialize' %}">Deserialize</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'transfer' %}">Transfer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'fetch_data' %}">Fetch Data</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'parse_xml' %}">Parse XML</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
-
-    <main class="container mt-4 d-flex justify-content-center">
-        <div class="w-75 text-center">
-            {% block content %}
-            <!-- Page specific content goes here -->
-            {% endblock %}
         </div>
-    </main>
+    </nav>
+</header>
 
-    <footer class="bg-dark text-white text-center py-3 mt-4">
-        <p>&copy; OWASP Top 10 in Python-Based Development Framework</p>
-    </footer>
+<main class="container mt-4 d-flex justify-content-center">
+    <div class="w-75 text-center">
+        {% block content %}
+        <!-- Page specific content goes here -->
+        {% endblock %}
+    </div>
+</main>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<footer class="bg-dark text-white text-center py-3 mt-4">
+    <p>&copy; OWASP Top 10 in Python-Based Development Framework</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
